[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyurl-mcp-server"
version = "1.0.0"
description = "TinyURL MCP Server for generating short links"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "VerySmallWoods", email = "0001coder@gmail.com"},
]
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.32.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sugarforever/tinyurl-mcp-server"
Issues = "https://github.com/sugarforever/tinyurl-mcp-server/issues"

[project.scripts]
tinyurl-mcp-server = "tinyurl_mcp_server:main"
